--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="col-xxl-8">
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                            <p class="lead fw-light mb-4">My name is Aleksi Katajisto and I am 34 year old career
+                            <p class="lead fw-light mb-4">My name is Aleksi Katajisto and I am a 34-year-old career
                                 changer from Espoo</p>
                             <p class="text-muted">I am a second year student majoring in Business Information Technology
                                 &
