--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                                             Sciences with
                                             a lot of modern equipment available for students and employees free of
                                             charge. 
-                                            The goal of this project was to improve existing booking system, which was a
+                                            The goal of this project was to improve the existing booking system, which was a
                                             simple piece of paper.
                                             <br><br>
                                             This functional prototype was completed using Microsoft Power Apps.
@@ -78,10 +78,10 @@
                                         <p>In this project we focused on improving the UX/UI flow of MyStockmann mobile
                                             application, mostly in
                                             terms of making it more inspirational and engaging.
-                                            <br>The intent was to create new and more inspiring "inspiration" section
+                                            <br>The intent was to create a new and more inspiring "inspiration" section
                                             and combine these changes
                                             to the overall look of the app.
-                                            <br>MyStockmannapp has had quite poor score in both major app stores for
+                                            <br>MyStockmann app has had quite a poor score in both major app stores for
                                             years, and seemed to be
                                             facing some usability issues according to several users.
                                             <br><br> This UX/UI prototype was based on our own user research and was
@@ -99,7 +99,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
                                         <h2 class="fw-bolder">Digital service for finding internships</h2>
-                                        <p>The purpose of the project was to find out if users are satisfied with the current services for finding an internship positions and if there is a need for a new service.
+                                        <p>The purpose of the project was to find out if users are satisfied with the current services for finding internship positions and if there is a need for a new service.
                                             <br>In addition to this, we wanted to find out thoroughly what the potential user of the service is like, what is important to them, and what are their core needs.
                                             <br><br> This UI prototype was based on our own user research and was created with Canva.
                                         </p>
@@ -114,7 +114,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
                                         <h2 class="fw-bolder">Upcoming: Thesis for Nokia, Fall 2023</h2>
-                                        <p> During this design spring we will either design, prototype or implement a
+                                        <p> During this design sprint we will either design, prototype or implement a
                                             new service for Nokia Corporation.
                                             <br> We will receive more specific details about this project before fall.
                                         </p>
